kyverno/policies/require-non-root.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: require-non-root

spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: check-run-as-non-root

      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "Containers must run as non-root."

        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
